code added to dashboard.py, adding image for testing

--- a/testing_notebook.ipynb
+++ b/testing_notebook.ipynb
@@ -90,6 +90,157 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "24d1fc5c-2b61-42f2-af83-187a5c8d7ee0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeltaGenerator(_root_container=0, _provided_cursor=None, _parent=None, _block_type=None, _form_data=None)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col1, col2 = st.columns(2)\n",
+    "col1.header(\"teams\")\n",
+    "\n",
+    "col2.header(\"Prediction\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c066b085-687f-4131-bb06-0407e42b93a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "button1 = st.button(\"Run Prediction\")\n",
+    "if button1:\n",
+    "    st.write(\"prediction are being calculated...\")\n",
+    "    result = predict_model()\n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ecedf19-490e-4fb6-8c07-d12e88507e5e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2851732a-88fa-4483-9a8f-44307dd9c01c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d50ee8e1-1aed-4756-82c1-6b586af0c7d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06bcc79c-dc78-4882-9726-d66b033a2909",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86ba9b8d-4d12-4f1d-83b6-97c5ee2ad9ce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bf782c1-d958-4f5d-a120-b0ecd549406c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a84ec66a-7163-4dce-af34-3d00ff895ff6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0c2a9ca-3af7-4aeb-9628-9b102dc44483",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @st.cache(allow_output_mutation=True)\n",
+    "def load_model(model_name):\n",
+    "    LR = LR.load(model_name)\n",
+    "    return (LR)\n",
+    "LR = load_model('model_name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4531d0c-ab7a-4506-bdfc-71aeeb9b55ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_model():\n",
+    "    model = tf.keras.models.load_model(\"./resourses/model.hdf5\")\n",
+    "    return model\n",
+    "model = load_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "951da08a-69e3-4b67-900a-9047adefb6fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeltaGenerator(_root_container=1, _provided_cursor=None, _parent=DeltaGenerator(_root_container=0, _provided_cursor=None, _parent=None, _block_type=None, _form_data=None), _block_type=None, _form_data=None)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st.sidebar.image(\"chiefslogo.png\", width=40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91599c9f-5a88-44b5-bcf8-eaace476d510",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
