updated file team csv, added csv file

--- a/Teamcsv.ipynb
+++ b/Teamcsv.ipynb
@@ -1632,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
    "id": "442ca1e0-a506-4c2c-bb2e-8cea06733bf9",
    "metadata": {},
    "outputs": [
@@ -1822,7 +1822,7 @@
        "4    13.76    -6.71   -0.05  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1834,19 +1834,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3b34ec95-9825-4528-90f1-419ccabf5f93",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "b6c754c0-46b0-4893-a4f9-db07a49c5396",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Result</th>\n",
+       "      <th>Rec</th>\n",
+       "      <th>Home</th>\n",
+       "      <th>Opp</th>\n",
+       "      <th>TmScore</th>\n",
+       "      <th>OppScore</th>\n",
+       "      <th>O_1stD</th>\n",
+       "      <th>O_Tot_yd</th>\n",
+       "      <th>O_P_Yd</th>\n",
+       "      <th>O_R_Yd</th>\n",
+       "      <th>O_TO</th>\n",
+       "      <th>D_1stD</th>\n",
+       "      <th>D_Tot_Yd</th>\n",
+       "      <th>D_P_Yd</th>\n",
+       "      <th>D_R_Yd</th>\n",
+       "      <th>D_TO</th>\n",
+       "      <th>Offence</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp.Tms</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bills</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Chicago Bears</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>386.0</td>\n",
+       "      <td>312.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>322.0</td>\n",
+       "      <td>188.0</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>21.58</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>-0.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bills</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2-0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Indianapolis Colts</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>371.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>354.0</td>\n",
+       "      <td>245.0</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>7.11</td>\n",
+       "      <td>-1.29</td>\n",
+       "      <td>-3.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bills</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3-0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Tampa Bay Buccaneers</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>407.0</td>\n",
+       "      <td>331.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>446.0</td>\n",
+       "      <td>411.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20.56</td>\n",
+       "      <td>-15.15</td>\n",
+       "      <td>3.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Bills</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Arizona Cardinals</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>401.0</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>465.0</td>\n",
+       "      <td>249.0</td>\n",
+       "      <td>216.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.94</td>\n",
+       "      <td>-21.72</td>\n",
+       "      <td>-2.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bills</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Seattle Seahawks</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>476.0</td>\n",
+       "      <td>358.0</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>354.0</td>\n",
+       "      <td>262.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>13.76</td>\n",
+       "      <td>-6.71</td>\n",
+       "      <td>-0.05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Team  Result  Rec  Home                   Opp  TmScore  OppScore  O_1stD  \\\n",
+       "0  Bills       1  1-0     0         Chicago Bears     34.0      14.0    18.0   \n",
+       "1  Bills       1  2-0     1    Indianapolis Colts     27.0      24.0    21.0   \n",
+       "2  Bills       1  3-0     0  Tampa Bay Buccaneers     34.0      24.0    22.0   \n",
+       "3  Bills       0  3-1     0     Arizona Cardinals     20.0      37.0    24.0   \n",
+       "4  Bills       1  4-1     1      Seattle Seahawks     26.0      17.0    24.0   \n",
+       "\n",
+       "   O_Tot_yd  O_P_Yd  O_R_Yd  O_TO  D_1stD  D_Tot_Yd  D_P_Yd  D_R_Yd  D_TO  \\\n",
+       "0     386.0   312.0    74.0   0.0    24.0     322.0   188.0   134.0   2.0   \n",
+       "1     371.0   270.0   101.0   2.0    22.0     354.0   245.0   109.0   2.0   \n",
+       "2     407.0   331.0    76.0   0.0    27.0     446.0   411.0    35.0   0.0   \n",
+       "3     401.0   280.0   121.0   2.0    27.0     465.0   249.0   216.0   0.0   \n",
+       "4     476.0   358.0   118.0   1.0    22.0     354.0   262.0    92.0   2.0   \n",
+       "\n",
+       "   Offence  Defense  Sp.Tms  \n",
+       "0    21.58     0.85   -0.52  \n",
+       "1     7.11    -1.29   -3.09  \n",
+       "2    20.56   -15.15    3.43  \n",
+       "3     8.94   -21.72   -2.64  \n",
+       "4    13.76    -6.71   -0.05  "
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_team_df = total_team_df.replace('W', 1)\n",
+    "total_team_df = total_team_df.replace('L', 0) \n",
+    "total_team_df.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1863,6 +2050,16 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "3b34ec95-9825-4528-90f1-419ccabf5f93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_team_df.to_csv('./resources/Team_df.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
