adding new files

--- a/GradienBoostingScore.ipynb
+++ b/GradienBoostingScore.ipynb
@@ -76,7 +76,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1-0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Chicago Bears</td>\n",
        "      <td>34.0</td>\n",
        "      <td>14.0</td>\n",
@@ -84,7 +84,7 @@
        "      <td>386.0</td>\n",
        "      <td>...</td>\n",
        "      <td>74.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>24.0</td>\n",
        "      <td>322.0</td>\n",
        "      <td>188.0</td>\n",
@@ -100,7 +100,7 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>2-0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>Indianapolis Colts</td>\n",
        "      <td>27.0</td>\n",
        "      <td>24.0</td>\n",
@@ -124,7 +124,7 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>3-0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Tampa Bay Buccaneers</td>\n",
        "      <td>34.0</td>\n",
        "      <td>24.0</td>\n",
@@ -132,12 +132,12 @@
        "      <td>407.0</td>\n",
        "      <td>...</td>\n",
        "      <td>76.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>27.0</td>\n",
        "      <td>446.0</td>\n",
        "      <td>411.0</td>\n",
        "      <td>35.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>20.56</td>\n",
        "      <td>-15.15</td>\n",
        "      <td>3.43</td>\n",
@@ -148,7 +148,7 @@
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>3-1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Arizona Cardinals</td>\n",
        "      <td>20.0</td>\n",
        "      <td>37.0</td>\n",
@@ -161,7 +161,7 @@
        "      <td>465.0</td>\n",
        "      <td>249.0</td>\n",
        "      <td>216.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>8.94</td>\n",
        "      <td>-21.72</td>\n",
        "      <td>-2.64</td>\n",
@@ -172,7 +172,7 @@
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>4-1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>Seattle Seahawks</td>\n",
        "      <td>26.0</td>\n",
        "      <td>17.0</td>\n",
@@ -197,24 +197,24 @@
       ],
       "text/plain": [
        "    Team  Week  Result  Rec  Home                   Opp  TmScore  OppScore  \\\n",
-       "0  Bills     1       1  1-0     0         Chicago Bears     34.0      14.0   \n",
-       "1  Bills     2       1  2-0     1    Indianapolis Colts     27.0      24.0   \n",
-       "2  Bills     3       1  3-0     0  Tampa Bay Buccaneers     34.0      24.0   \n",
-       "3  Bills     4       0  3-1     0     Arizona Cardinals     20.0      37.0   \n",
-       "4  Bills     5       1  4-1     1      Seattle Seahawks     26.0      17.0   \n",
+       "0  Bills     1       1  1-0     1         Chicago Bears     34.0      14.0   \n",
+       "1  Bills     2       1  2-0     0    Indianapolis Colts     27.0      24.0   \n",
+       "2  Bills     3       1  3-0     1  Tampa Bay Buccaneers     34.0      24.0   \n",
+       "3  Bills     4       0  3-1     1     Arizona Cardinals     20.0      37.0   \n",
+       "4  Bills     5       1  4-1     0      Seattle Seahawks     26.0      17.0   \n",
        "\n",
        "   O_1stD  O_Tot_yd  ...  O_R_Yd  O_TO  D_1stD  D_Tot_Yd  D_P_Yd  D_R_Yd  \\\n",
-       "0    18.0     386.0  ...    74.0   0.0    24.0     322.0   188.0   134.0   \n",
+       "0    18.0     386.0  ...    74.0   1.0    24.0     322.0   188.0   134.0   \n",
        "1    21.0     371.0  ...   101.0   2.0    22.0     354.0   245.0   109.0   \n",
-       "2    22.0     407.0  ...    76.0   0.0    27.0     446.0   411.0    35.0   \n",
+       "2    22.0     407.0  ...    76.0   1.0    27.0     446.0   411.0    35.0   \n",
        "3    24.0     401.0  ...   121.0   2.0    27.0     465.0   249.0   216.0   \n",
        "4    24.0     476.0  ...   118.0   1.0    22.0     354.0   262.0    92.0   \n",
        "\n",
        "   D_TO  Offence  Defense  Sp.Tms  \n",
        "0   2.0    21.58     0.85   -0.52  \n",
        "1   2.0     7.11    -1.29   -3.09  \n",
-       "2   0.0    20.56   -15.15    3.43  \n",
-       "3   0.0     8.94   -21.72   -2.64  \n",
+       "2   1.0    20.56   -15.15    3.43  \n",
+       "3   1.0     8.94   -21.72   -2.64  \n",
        "4   2.0    13.76    -6.71   -0.05  \n",
        "\n",
        "[5 rows x 21 columns]"
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "3ac6b9b0-8c91-4b65-8c8f-3bf8b32460b4",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
        "      <td>0.137778</td>\n",
        "      <td>0.685863</td>\n",
        "      <td>-0.921875</td>\n",
-       "      <td>-1.005823</td>\n",
+       "      <td>-0.648313</td>\n",
        "      <td>0.856466</td>\n",
        "      <td>-0.163092</td>\n",
        "      <td>-0.587649</td>\n",
@@ -337,7 +337,7 @@
        "      <td>-0.061310</td>\n",
        "      <td>0.160920</td>\n",
        "      <td>-0.362464</td>\n",
-       "      <td>0.672138</td>\n",
+       "      <td>0.492718</td>\n",
        "      <td>0.435997</td>\n",
        "      <td>0.233170</td>\n",
        "      <td>0.184391</td>\n",
@@ -361,7 +361,7 @@
        "      <td>0.416501</td>\n",
        "      <td>0.923337</td>\n",
        "      <td>-0.880437</td>\n",
-       "      <td>-1.005823</td>\n",
+       "      <td>-0.648313</td>\n",
        "      <td>1.487169</td>\n",
        "      <td>1.372423</td>\n",
        "      <td>2.432786</td>\n",
@@ -385,7 +385,7 @@
        "      <td>0.336866</td>\n",
        "      <td>0.285906</td>\n",
        "      <td>0.051915</td>\n",
-       "      <td>0.672138</td>\n",
+       "      <td>0.492718</td>\n",
        "      <td>1.487169</td>\n",
        "      <td>1.607704</td>\n",
        "      <td>0.238569</td>\n",
@@ -409,7 +409,7 @@
        "      <td>1.332306</td>\n",
        "      <td>1.260800</td>\n",
        "      <td>-0.010242</td>\n",
-       "      <td>-0.166843</td>\n",
+       "      <td>-0.648313</td>\n",
        "      <td>0.435997</td>\n",
        "      <td>0.233170</td>\n",
        "      <td>0.414648</td>\n",
@@ -433,11 +433,11 @@
       ],
       "text/plain": [
        "   TmScore    O_1stD  O_Tot_yd    O_P_Yd    O_R_Yd      O_TO    D_1stD  \\\n",
-       "0     34.0 -0.819070  0.137778  0.685863 -0.921875 -1.005823  0.856466   \n",
-       "1     27.0 -0.184951 -0.061310  0.160920 -0.362464  0.672138  0.435997   \n",
-       "2     34.0  0.026422  0.416501  0.923337 -0.880437 -1.005823  1.487169   \n",
-       "3     20.0  0.449168  0.336866  0.285906  0.051915  0.672138  1.487169   \n",
-       "4     26.0  0.449168  1.332306  1.260800 -0.010242 -0.166843  0.435997   \n",
+       "0     34.0 -0.819070  0.137778  0.685863 -0.921875 -0.648313  0.856466   \n",
+       "1     27.0 -0.184951 -0.061310  0.160920 -0.362464  0.492718  0.435997   \n",
+       "2     34.0  0.026422  0.416501  0.923337 -0.880437 -0.648313  1.487169   \n",
+       "3     20.0  0.449168  0.336866  0.285906  0.051915  0.492718  1.487169   \n",
+       "4     26.0  0.449168  1.332306  1.260800 -0.010242 -0.648313  0.435997   \n",
        "\n",
        "   D_Tot_Yd    D_P_Yd    D_R_Yd  ...  Opp_New Orleans Saints  \\\n",
        "0 -0.163092 -0.587649  0.645454  ...                       0   \n",
@@ -477,7 +477,7 @@
        "[5 rows x 55 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,8 +514,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c4a46f0-2567-4ce5-aba9-ac7306eb4fb3",
+   "metadata": {},
+   "source": [
+    "## Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "e486e66c-88e4-4f3a-9580-e377733bb97a",
    "metadata": {},
    "outputs": [
@@ -531,7 +539,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.135710838872473\n"
+      "4.814000872272564\n"
      ]
     }
    ],
@@ -558,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "65d458ee-c9e9-4e6f-b032-2a93739770d4",
    "metadata": {},
    "outputs": [],
@@ -628,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "c2ad9061-124d-41e0-83d8-af495729c3a9",
    "metadata": {},
    "outputs": [
@@ -648,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "5c9934a7-0c08-4e92-a066-330859418650",
    "metadata": {},
    "outputs": [
@@ -659,8 +667,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/xn/d9p0xm1s6qsf6_xczswgw90h0000gn/T/ipykernel_50190/1784227744.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mscore\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwinner\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mScore_Predictor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Rams'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Patriots'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/xn/d9p0xm1s6qsf6_xczswgw90h0000gn/T/ipykernel_50190/1926481413.py\u001b[0m in \u001b[0;36mScore_Predictor\u001b[0;34m(home_team, away_team)\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0mX_Playoff_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mteam1_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mteam2_test\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m     \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGB_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_Playoff_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"will score\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"will score\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/xn/d9p0xm1s6qsf6_xczswgw90h0000gn/T/ipykernel_50820/1784227744.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mscore\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwinner\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mScore_Predictor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Rams'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Patriots'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/xn/d9p0xm1s6qsf6_xczswgw90h0000gn/T/ipykernel_50820/1926481413.py\u001b[0m in \u001b[0;36mScore_Predictor\u001b[0;34m(home_team, away_team)\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0mX_Playoff_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mteam1_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mteam2_test\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m     \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGB_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_Playoff_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"will score\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"will score\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/opt/anaconda3/envs/dev/lib/python3.7/site-packages/sklearn/ensemble/_gb.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m   1607\u001b[0m             \u001b[0mThe\u001b[0m \u001b[0mpredicted\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1608\u001b[0m         \"\"\"\n\u001b[0;32m-> 1609\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mDTYPE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"C\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'csr'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1610\u001b[0m         \u001b[0;31m# In regression we can directly return the raw value from the trees.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1611\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_raw_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/opt/anaconda3/envs/dev/lib/python3.7/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36minner_f\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     71\u001b[0m                           FutureWarning)\n\u001b[1;32m     72\u001b[0m         \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 73\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     74\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0minner_f\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/opt/anaconda3/envs/dev/lib/python3.7/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator)\u001b[0m\n\u001b[1;32m    644\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mforce_all_finite\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    645\u001b[0m             _assert_all_finite(array,\n\u001b[0;32m--> 646\u001b[0;31m                                allow_nan=force_all_finite == 'allow-nan')\n\u001b[0m\u001b[1;32m    647\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    648\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mensure_min_samples\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
